--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
-        "admin-lte": "^3.1.0"
+        "admin-lte": "^3.1.0",
+        "sweetalert2": "^11.0.16",
+        "toastr": "^2.1.4"
     }
 }
