--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
+        "spatie/laravel-permission": "^4.1",
         "yajra/laravel-datatables": "^1.5"
     },
     "require-dev": {
