--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
+        "axios": "^0.21.4",
         "bootstrap": "^4.0.0",
         "jquery": "^3.2",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.37",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
-        "postcss": "^8.1.14",
-        "resolve-url-loader": "^3.1.2",
+        "postcss": "^8.3.1",
+        "resolve-url-loader": "^4.0.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
         "admin-lte": "^3.1.0",
+        "bs-custom-file-input": "^1.3.4",
         "sweetalert2": "^11.0.16",
         "toastr": "^2.1.4"
     }
