--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "postcss": "^8.3.1",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "jquery-validation": "^1.19.0"
     },
     "dependencies": {
         "admin-lte": "^3.1.0",
