reparando css de fonts

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=02b30edd5f7a6b3c0d04",
+    "/css/app.css": "/css/app.css?id=fe07640c48cb3b33fbcf"
 }
