--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=ac3968bf30c412e6d8f0",
-    "/css/app.css": "/css/app.css?id=fe07640c48cb3b33fbcf"
+    "/js/app.js": "/js/app.js?id=ed27e77dc6496f5130bc5511dd3b179b",
+    "/css/app.css": "/css/app.css?id=4904452f4911ee66526827802796555c"
 }
